--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require_tree .
  *= require_self
  */
-
+body{
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
 nav{
   float:right;
 }
@@ -60,6 +62,7 @@ nav a{
  }
 
  #current_weather{
+  font-family: 'Inconsolata', "Courier New", Courier, monospace;
   position:fixed;
   right:20px;
   bottom:20px;
@@ -68,8 +71,8 @@ nav a{
  #word_text{
   font-size: 2em;
   height:100px;
-  padding:10px;
-  width:97%;
+  padding:10px 20px;
+  width:100%;
 
   -webkit-box-shadow: 3px 3px 3px 0px rgba(50, 50, 50, 0.62);
   -moz-box-shadow:    3px 3px 3px 0px rgba(50, 50, 50, 0.62);
@@ -77,10 +80,18 @@ nav a{
  }
 
  input{
-  background-color:#3D7CB8;
+  border: none;
   color:white;
   font-size: 24px;
+  margin-top: 11px;
   padding:10px 15px;
+ }
+
+ #word_text,
+ input{
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
  }
 
  #others {
