timestamps, spin position

--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -18,5 +18,8 @@
   <%= @word.weather %>
 </p>
 
+created <%= @word.created_at %><br>
+updated <%= @word.updated_at %><br>
+
 <%= link_to 'Edit', edit_word_path(@word) %> |
 <%= link_to 'Back', words_path %>
