--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,8 +26,8 @@ nav a{
 #loading_weather{
   display: none;
   position: absolute;
-  top:20px;
-  left:20px;
+  top:50%;
+  left:50%;
 }
 #loading_weather span{
   margin-left: -12px;
