--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -4,10 +4,12 @@
   <thead>
     <tr>
       <th>Text</th>
+      <th>Clouds</th>
+      <th>Pressure</th>
       <th>Temp</th>
       <th>Wind</th>
-      <th>Clouds</th>
-      <th colspan="3"></th>
+      <th>Created</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -15,11 +17,12 @@
     <% @words.each do |word| %>
       <tr>
         <td><%= word.text %></td>
+        <td><%= word.clouds %></td>
+        <td><%= word.pressure %></td>
         <td><%= word.temp %></td>
         <td><%= word.wind %></td>
-        <td><%= word.clouds %></td>
-        <td><%= link_to 'Show', word %></td>
-        <td><%= link_to 'Edit', edit_word_path(word) %></td>
+        <td><%= word.created_at %>&nbsp;</td>
+        <td><%= link_to 'Edit', edit_word_path(word) %>&nbsp;</td>
         <td><%= link_to 'Destroy', word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
