--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,6 +1,22 @@
-<h1>Listing words</h1>
+<h1>Words</h1>
 
-<table>
+<div id="words_index">
+  
+<div id="controls">
+<input class="search" placeholder="Search" />
+<button class="sort" data-sort="text">
+  Sort by text
+</button>
+<button class="sort" data-sort="temp">
+  Sort by temp
+</button>
+<button class="sort" data-sort="created_at">
+  Sort by created_at
+</button>
+</div>
+
+
+<table >
   <thead>
     <tr>
       <th>Text</th>
@@ -13,22 +29,20 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody class="list">
     <% @words.each do |word| %>
       <tr>
-        <td><%= word.text %></td>
-        <td><%= word.temp %></td>
-        <td><%= word.clouds %></td>
-        <td><%= word.pressure %></td>
-        <td><%= word.wind %></td>
-        <td><%= word.created_at %>&nbsp;</td>
-        <td><%= link_to 'Edit', edit_word_path(word) %>&nbsp;</td>
-        <td><%= link_to 'Destroy', word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="text"><%= word.text %></td>
+        <td class="temp"><%= word.temp %></td>
+        <td class="clouds"><%= word.clouds %></td>
+        <td class="pressure"><%= word.pressure %></td>
+        <td class="wind"><%= word.wind %></td>
+        <td class="created_at"><%= word.created_at %>&nbsp;</td>
+        <!-- <td><%= link_to 'Edit', edit_word_path(word) %>&nbsp;</td>
+        <td><%= link_to 'Destroy', word, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Word', new_word_path %>
+  
+</div>
